--- a/public/css/main.css
+++ b/public/css/main.css
@@ -96,7 +96,7 @@ table.fixed-header  tfoot td{
 /*------General Page Layout------*/
 
 
-/*---Navbar---*/
+/*---Header and Navbar---*/
 nav.navbar {
     padding-top:1.5rem;
 }
